# cookiecutter-fastapi

./: README.md  cookiecutter.json  setup.cfg
{{cookiecutter.project_slug}}/: .gitignore  Dockerfile  Makefile  pyproject.toml
{{cookiecutter.project_slug}}/tests/: conftest.py  test_app.py  test_utils.py
{{cookiecutter.project_slug}}/tests/fixture_package/: routers.py
{{cookiecutter.project_slug}}/tests/healthchecks/: test_controller.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: app.py  config.py  main.py  routers.py  utils.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/healthchecks/: controller.py
